--- a/style.css
+++ b/style.css
@@ -1,15 +1,43 @@
-body{
-    background-color: #7d8e95;
-}
 
+
+body{
+    background-color: #7D8E95;
+}
 header {
-    background-color: #fbe0c3;
+    background-color: #FBE0C3;
     height: 40vh;
     /* width: 100vw; */
     /* display: inline-block; */
     padding-top: 100px;
     text-align: center;
+    padding-bottom: 10em;
+    
 }
-/* #meats :hover {
-    display: block;
-  } */
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 10px;
+    height: 400px;
+   
+  }
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  /* Add some padding inside the card container */
+  .container {
+    padding: 5em 8em;
+    height: 300px;
+
+  }
+  img{
+      
+      height: 50%;
+      
+  }
