did a bunch of stuff

--- a/style.css
+++ b/style.css
@@ -1,8 +1,64 @@
-#header {
-    background-color: #fbe0c3;
-    height: 50vh;
+
+#page-2{
+    display:none;
+} 
+body{
+    background-color: #7D8E95;
+}
+
+header {
+    background-color: #FBE0C3;
+    height: 40vh;
     /* width: 100vw; */
     /* display: inline-block; */
     padding-top: 100px;
     text-align: center;
+    padding-bottom: 10em;
+    
 }
+.cards{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* display: none; */
+}
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 10px;
+    height: 400px;
+    width: 350px;
+   
+  }
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  /* Add some padding inside the card container */
+  .container {
+    padding: 5em 8em;
+    height: 300px;
+
+  }
+  img{
+      height: 60%;
+    }
+
+  #random-Btn{
+      color:black ;
+      background-color: white;
+      border: black 1px solid;
+  }
+ #random-Btn:hover {
+    background-color: black;
+    color: white;
+  }
+ 
+
+
+
+
+
+  
+ 
