--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 
 #page-2{
     display:none;
+    background-color: #ACBDBA;
 } 
 body{
-    background-color: #BCCFD3;
+    background-color: #B6D6CC;
 }
 
 header {
-    background-color: #86c3b4;
+    background-color: #74A4BC ;
     height: 40vh;
     /* width: 100vw; */
     /* display: inline-block; */
