--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 header {
-    background-color: #74A4BC ;
+    background-color: #86c3b4; ;
     height: 40vh;
     /* width: 100vw; */
     /* display: inline-block; */
@@ -21,39 +21,48 @@ header {
     display: none;
     flex-wrap: wrap;
     justify-content: center;
-    /* display: none; */
+    display: none;
+    padding-top: 10px;
+
 }
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    margin: 10px;
+    margin: 20px;
     height: 400px;
-    width: 350px;
-   
+    width: 400px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer; 
+    border-radius: 5%;
   }
   /* On mouse-over, add a deeper shadow */
   .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
+    transform: scale(1.1);
+   }
   /* Add some padding inside the card container */
   .container {
-    padding: 5em 8em;
-    height: 300px;
+    padding: 2.5em 8em;
+    height: 50px;
 
   }
   img{
-      height: 60%;
+      height: 325px;
+      width:325;
+      border-radius: 5%;
     }
 
   #random-Btn{
       color:black ;
       background-color: white;
       border: black 1px solid;
+      transition: all 0.2s ease-in-out;
   }
  #random-Btn:hover {
     background-color: black;
     color: white;
+    animation: swing 1s ease;
+    animation-iteration-count: 1;
   }
  #page-2-img{
    width:400px ;
@@ -77,7 +86,53 @@ width:200px ;
 height: 200px;
  }
 
+/* h4{
+    margin-top: 20px;
+} */
 
+
+/* button { */
+    /* color: #1D9AF2; */
+    /* background-color: #292D3E; */
+    /* border: 1px solid #1D9AF2; */
+    /* border-radius: 4px; */
+    /* padding: 0 15px; */
+    /* cursor: pointer; */
+    /* height: 32px; */
+    /* font-size: 14px; */
+    /* transition: all 0.2s ease-in-out; */
+  /* } */
+  /* button:hover {
+   animation: swing 1s ease;
+   animation-iteration-count: 1;
+  } */
+  
+   @keyframes swing {
+    15% {
+      -webkit-transform: translateX(5px);
+      transform: translateX(5px);
+    }
+    30% {
+      -webkit-transform: translateX(-5px);
+      transform: translateX(-5px);
+    }
+    50% {
+      -webkit-transform: translateX(3px);
+      transform: translateX(3px);
+    }
+    65% {
+      -webkit-transform: translateX(-3px);
+      transform: translateX(-3px);
+    }
+    80% {
+      -webkit-transform: translateX(2px);
+      transform: translateX(2px);
+    }
+    100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+    }
+  } 
 
   
  
