--- a/style.css
+++ b/style.css
@@ -71,12 +71,26 @@ header {
  .ing-title{
    padding-left: 18px;
  }
+ .ingredients-div{
+   /* display:flexbox; */
+   height: 50px;
+   /* width: 90px; */
+   flex-wrap: wrap;
+ }
  .ingredients-box{
 width:200px ;
 height: 200px;
  }
+ .yt-video{
+   padding-top: 100px;
+ }
 
+ .title{
+   text-align: center;
+   padding-bottom: 3em;
+ }
+ h4{
+   width: 180px;
+   height: 50px;
 
-
-  
- 
+ }
