--- a/style.css
+++ b/style.css
@@ -178,13 +178,17 @@ h4{
   margin-top: 60px;
   margin-right: 100px;
 }
+#ingredients{
+  font-size: 15px;
+}
 
 @media only screen and (max-width: 960px) {
   #page-2-img{
     display: none;
   }
   #bottom-half {
-    display: block;
+    display: flex;
+    flex-direction: column;
     align-items: center
   }
   #bottom-half.ingredients-div{
@@ -195,9 +199,6 @@ h4{
     display: block;
     justify-content: center;
   }
-  /* #page-2{
-    display:block;
-  } */
 
 
 }
